force-app/main/default/objects/Animal360_Template_Indicator_Default__mdt/Animal360_Template_Indicator_Default__mdt.object-meta.xml
<CustomObject>
    <description
  >Packaged indicator assignments that seed editable runtime template rows.</description>
    <label>Animal360 Template Indicator Default</label>
    <pluralLabel>Animal360 Template Indicator Defaults</pluralLabel>
</CustomObject>