force-app/main/default/objects/Animal360_Template_Indicator_Default__mdt/fields/Default_Severity_Scale__c.field-meta.xml
<CustomField>
    <fullName>Default_Severity_Scale__c</fullName>
    <description
  >Default severity scale handling for the assignment.</description>
    <label>Default Severity Scale</label>
    <length>40</length>
    <type>Text</type>
</CustomField>