force-app/main/default/objects/Animal360_Template_Indicator_Default__mdt/fields/Domain_Code__c.field-meta.xml
<CustomField>
    <fullName>Domain_Code__c</fullName>
    <description
  >Domain code used to group the indicator at runtime.</description>
    <label>Domain Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>