force-app/main/default/objects/Animal360_Template_Indicator_Default__mdt/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description
  >Packaged help text shown for the template assignment.</description>
    <label>Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>