force-app/main/default/objects/Animal360_Template_Indicator_Default__mdt/fields/Indicator_Key__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Key__c</fullName>
    <description>Indicator key assigned to the template.</description>
    <label>Indicator Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>