force-app/main/default/objects/Animal360_Template_Indicator_Default__mdt/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <description
  >Marks the indicator as required for completeness calculations.</description>
    <label>Is Required</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>