force-app/main/default/objects/Animal360_Template_Indicator_Default__mdt/fields/Template_Key__c.field-meta.xml
<CustomField>
    <fullName>Template_Key__c</fullName>
    <description>Packaged template key that owns the assignment.</description>
    <label>Template Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>