force-app/main/default/objects/Animal360_Template_Indicator_Default__mdt/fields/Visible_When_Rule__c.field-meta.xml
<CustomField>
    <fullName>Visible_When_Rule__c</fullName>
    <description
  >Optional runtime visibility rule interpreted by the assessment-entry UI.</description>
    <label>Visible When Rule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>